--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,15 @@ jobs:
           cd lens
           git checkout v${{ env.LENS_VERSION }}
           make build
-          [[ -f *.dmg ]] || mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.dmg dist/OpenLens-${{ env.LENS_VERSION }}.dmg
-          [[ -f *.AppImage ]] || mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.AppImage dist/OpenLens-${{ env.LENS_VERSION }}.AppImage
-          [[ -f *.deb ]] || mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.amd64.deb dist/OpenLens-${{ env.LENS_VERSION }}.deb
-          [[ -f *.rpm ]] || mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.rpm dist/OpenLens-${{ env.LENS_VERSION }}.rpm
+          if [ "$RUNNER_OS" == "macOS" ]; then
+                mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.dmg dist/OpenLens-${{ env.LENS_VERSION }}.dmg
+          elif [ "$RUNNER_OS" == "Linux" ]; then
+                mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.AppImage dist/OpenLens-${{ env.LENS_VERSION }}.AppImage
+                mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.amd64.deb dist/OpenLens-${{ env.LENS_VERSION }}.deb
+                mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.rpm dist/OpenLens-${{ env.LENS_VERSION }}.rpm
+          else 
+                mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.exe dist/OpenLens-${{ env.LENS_VERSION }}.exe
+          fi
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
