--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,11 @@ jobs:
             echo "LENS_VERSION=$LENS_VERSION" >> $GITHUB_ENV
           fi
         shell: bash
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3        
         with:
           node-version: 14.19.3
+      - name: Add VS to path
+        uses: microsoft/setup-msbuild@v1.1
       - name: Build Lens
         run: |
           git clone https://github.com/lensapp/lens.git
