--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           cd lens
           git checkout v${{ env.LENS_VERSION }}
           if [ "$RUNNER_OS" == "Windows" ]; then
-            npm install --g --production windows-build-tools --vs2017
+            choco install visualstudio2019buildtools visualstudio2019-workload-vctools
           fi
           make build
           if [ "$RUNNER_OS" == "macOS" ]; then
