--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Check latest Lens version
 
 on:
   schedule:
-    - cron: '5 * * * *'
+    - cron: '15 */6 * * *'
   workflow_dispatch:
 
 jobs:
