--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
                 mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.AppImage dist/OpenLens-${{ env.LENS_VERSION }}.AppImage
                 mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.amd64.deb dist/OpenLens-${{ env.LENS_VERSION }}.deb
                 mv dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.rpm dist/OpenLens-${{ env.LENS_VERSION }}.rpm
-          else 
-                cp dist/OpenLens Setup -${{ env.LENS_VERSION }}-latest.*.exe dist/OpenLens-${{ env.LENS_VERSION }}.exe
+          else          
+                cp dist/OpenLens Setup ${{ env.LENS_VERSION }}-latest.*.exe dist/OpenLens-${{ env.LENS_VERSION }}.exe
           fi
         shell: bash
       - name: Release
