--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,15 @@ jobs:
                 mv dist/OpenLens*.exe dist/OpenLens-${{ env.LENS_VERSION }}.exe
           fi
         shell: bash
+      - name: Calculate SHA256 checksum
+        run: |
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            certutil -hashfile OpenLens-${{ env.LENS_VERSION }}.exe SHA256 > OpenLens-${{ env.LENS_VERSION }}.exe.sha256
+          else
+            for filename in OpenLens-${{ env.LENS_VERSION }}.*; do shasum -a 256 ${filename} > ${filename}.sha256 ; done
+          fi
+        shell: bash
+        working-directory: lens/dist
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
@@ -52,3 +61,4 @@ jobs:
               lens/dist/OpenLens-${{ env.LENS_VERSION }}.deb
               lens/dist/OpenLens-${{ env.LENS_VERSION }}.rpm
               lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+              lens/dist/OpenLens-${{ env.LENS_VERSION }}.*.sha256
