--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
                 cp dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.rpm
           else
                 cp dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
+                filename=dist/Open*.exe
                 winfilename=$(echo $filename | sed "s/OpenLens.Setup./OpenLens Setup /")
                 mv dist/OpenLens*.exe dist/$winfilename
           fi
