Run Openlens builds on PR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+  pull_request:
 
 jobs:
   build:
@@ -81,8 +82,24 @@ jobs:
           fi
         shell: bash
         working-directory: lens/releasefiles
+
+      - uses: actions/upload-artifact@v3
+        if: github.ref != 'refs/heads/master'
+        with:
+          name: OpenLens-${{ matrix.os }}
+          retention-days: 5
+          path: | 
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}*.dmg
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}.deb
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}.rpm
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}*.zip
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
+              lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}*.sha256
+        
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
+        if: github.ref == 'refs/heads/master'
         with:
           tag_name: v${{ env.LENS_VERSION }}
           files: | 
@@ -95,6 +112,7 @@ jobs:
               lens/releasefiles/OpenLens-${{ env.LENS_VERSION }}*.sha256
       - name: Latest
         uses: softprops/action-gh-release@v0.1.14
+        if: github.ref == 'refs/heads/master'
         with:
           tag_name: Latest
           files: | 
