--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: Get the latest version of Lens
         run: |
-          curl -s https://api.github.com/repos/lensapp/lens/releases/latest | jq -r '.tag_name[1:]' > version
+          curl -s https://api.github.com/repos/lensapp/lens/releases/latest | jq -r 'select(.prerelease == false) | .tag_name[1:]' > version
           export LENS_VERSION=$(cat version)
           echo "LENS_VERSION=$LENS_VERSION" >> $GITHUB_ENV
       - name: Add & Commit
