--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
             done
           elif [ "$RUNNER_OS" == "Linux" ]; then
             gem install fpm
-            env USE_SYSTEM_FPM=true
+            export USE_SYSTEM_FPM=true
             env ELECTRON_BUILDER_EXTRA_ARGS="--arm64 --x64" make build
             cp dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.x86_64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
             cp dist/OpenLens-${{ env.LENS_VERSION }}-latest.*.amd64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.deb
